# minimal-rust-lsp

./: Cargo.toml  README.md
notes/: problem-001.md
src/: main.rs  msg.rs  old-main.rs  stdio.rs
